[package]
name = "kvs-project-2"
version = "0.1.0"
authors = ["Ye Yangchen <yye02@email.wm.edu>"]
description = "A Key-Value Store with log-structured file"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
failure = "0.1.8"
serde = "1.0.136"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"